# mosaic_pose_estimation

./: .gitignore  CMakeLists.txt  cirs_params.yaml  default_params.yaml  mainpage.dox  manifest.xml  package.xml  setup.py  srv_fugu_params.yaml  uwsim_params.yaml
include/mosaic_cam_pose/: mosaic_processor.h
include/mosaic_pose_estimation/: mosaic_processor.h
launch/: mosaic_processor.launch
scripts/: getOdometryDatFile.py
scripts/mosaic_pose_estimation/: getOdometryDatFile.py
src/: mosaic_processor.cpp  mosaic_processor_node.cpp  process_bag.cpp
